# wagtail-transcription

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  edit_handlers.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  urls.py  wagtail_hooks.py  widgets.py
.circleci/: config.yml
.github/workflows/: test.yml
_.circleci/: config.yml
migrations/: 0001_initial.py  0002_alter_transcription_options.py
models/: __init__.py  model_admin.py  transcription.py
templates/wagtail_transcription/widgets/: transcription.html
templates/wagtailadmin/: base.html
templatetags/: transcription_tags.py
testproject/: Dockerfile  docker-compose.yml  manage.py  requirements.txt
testproject/testproject/: urls.py  wsgi.py
testproject/testproject/settings/: base.py  dev.py
testproject/testproject/templates/: base.html
tests/: test_transcription_model.py
views/: __init__.py  mixins.py  notifications.py  transcription.py
wagtail_transcription/: apps.py  decorators.py  edit_handlers.py  tokens.py  urls.py  wagtail_hooks.py  widgets.py
wagtail_transcription/migrations/: 0002_alter_transcription_options.py
wagtail_transcription/models/: __init__.py  transcription.py
wagtail_transcription/templates/wagtailadmin/: base.html
wagtail_transcription/templatetags/: transcription_tags.py  wagtail_transcription_notifications.py
wagtail_transcription/tests/: __init__.py  test_template_tags.py  test_transcription_model.py  test_views.py
wagtail_transcription/utils/: validation_errors.py
wagtail_transcription/views/: __init__.py  mixins.py  notifications.py  transcription.py
(+22 files in other folders)
