[metadata]
name = wagtail-transcription
version = 0.0.7
author = LilJack118
author_email = jakub@kachange.com
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/LilJack118/wagtail-transcription
project_urls =
    Bug Tracker = https://github.com/LilJack118/wagtail-transcription/issues
keywords = wagtail django
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    Wagtail >= 2.15.5
    django-notifications-hq
    python-docx
    pytube